--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
-<body>
+<body onload="recuperarCotacoes();">
+    <!-- spinner -->
+        <div id="meuSpinner">
+            <div class="d-flex justify-content-center align-items-center vh-100 vw-100">
+                <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </div>
     <!-- busca e alarme -->
     <div class="container">
         <div class="row mt-2 mb-3">
@@ -56,16 +65,16 @@
             <div class="col-6">
                 <div class="moeda">
                     <i class="fa-brands fa-bitcoin fa-2x"></i> <span class="tituloMoeda">Bitcoin</span>
-                    <h4 class="valor">$97.934,58</h4>
-                    <p class="lucratividade">3,91% <i class="fa-solid fa-sort-up"></i></p>
+                    <h4 class="valor" id="valorBTC">$0,00</h4>
+                    <p class="lucratividade" id="varBTC">0,00% <i class="fa-solid fa-sort-up"></i></p>
                     <img src="assets/Chart line.png" width="100%">
                 </div>
             </div>
             <div class="col-6">
                 <div class="moeda">
                     <i class="fa-brands fa-ethereum fa-2x"></i> <span class="tituloMoeda">Ethereum</span>
-                    <h4 class="valor">$3.350,45</h4>
-                    <p class="lucratividade">9,17% <i class="fa-solid fa-sort-up"></i></p>
+                    <h4 class="valor" id="valorETH">$0,00</h4>
+                    <p class="lucratividade" id="varETH">0,00% <i class="fa-solid fa-sort-up"></i></p>
                     <img src="assets/Chart line.png" width="100%">
                 </div>
             </div>
